# 3DEngine

./: CMakeLists.txt  README.md
Assets/Maps/: env_1.json  env_2.json  env_3.json
Assets/Scripts/: path.json
Config/: config.json
Includes/: 3DEngine_Testbench_Main.h  engine.h  geometric_shapes.h  json.h  physics.h  vec2f.h  vec3f.h  world_objects.h
Modules/: FindGLFW.cmake
Shaders/: SimpleVertexShader.vertexshader
Sources/: 3DEngine_Testbench_Main.cpp  engine.cpp  geometric_shapes.cpp  physics.cpp  world_objects.cpp
